--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://henriquesc23.github.io/coffe-delivery-project/",
+  "homepage": "https://henriquesc23.github.io/coffe-delivery-project/dist",
   "name": "coffee-delivery",
   "private": true,
   "version": "0.0.0",
@@ -10,11 +10,12 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.0",
     "@phosphor-icons/react": "^2.1.5",
+    "gh-pages": "^6.1.1",
     "immer": "^10.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
